Fix intro content may overflow

--- a/assets/assets/css/landing.scss
+++ b/assets/assets/css/landing.scss
@@ -6,7 +6,7 @@
 	// background-color: $scratch-orange;
 	// color: white;
 
-	height: calc(100vh - var(--navbar-height));
+	min-height: calc(100vh - var(--navbar-height));
 
 	.carousel {
 
